--- a/assets/more.scss
+++ b/assets/more.scss
@@ -7,5 +7,6 @@ main.more article form {
   input {
     flex: 1;
     min-width: 0;
+    width: auto;
   }
 }
